（杂项更改）升级主题

--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "pandas-cn",
-  "short_name": "pandas-cn",
+  "name": "matplotlib-cn",
+  "short_name": "matplotlib-cn",
   "icons": [
     {
       "src": "/icons/android-chrome-192x192.png",
