--- a/scripts/gallery/package.json
+++ b/scripts/gallery/package.json
@@ -11,8 +11,10 @@
   "devDependencies": {
     "cheerio": "^1.0.0-rc.3",
     "flyio": "^0.6.14",
+    "fs-extra": "^8.1.0",
     "jquery": "^3.4.1",
     "jsdom": "^15.1.1",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "tencentcloud-sdk-nodejs": "^3.0.90"
   }
 }
